[package]
name = "rscam"
version = "0.5.5"
description = "Wrapper for v4l2."
keywords = ["v4l2", "video", "camera", "capture"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/rscam"
documentation = "https://docs.rs/rscam"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
libc = "0.2"

[features]
no_wrapper = []
