[package]
name = "rscam"
version = "0.5.5"
description = "Wrapper for v4l2."
keywords = ["v4l2", "video", "camera", "capture"]
authors = ["Paul Loyd <pavelko95@gmail.com>"]
repository = "https://github.com/loyd/rscam"
documentation = "https://docs.rs/rscam"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
libc = "0.2"
thiserror = "1.0.9"
tokio = { version = "1.9.0", features = ["net"] }

[dev-dependencies]
tokio = { version = "1.9.0", features = ["full"] }

[features]
no_wrapper = []
tokio_async = []
